--- a/amis/services/auth-keycloak/theme/account/resources/css/account.css
+++ b/amis/services/auth-keycloak/theme/account/resources/css/account.css
@@ -60,7 +60,7 @@ header .navbar {
     background-color: #fff;
     border-color: #CECECE;
     border-style: solid;
-    border-width: 0 1px;
+    border-width: 1px;
     height: 100%;
     padding: 0 30px;
 }
